--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^2.10.0
   cloud_firestore: ^4.5.2
   flutter_otp_text_field: ^1.1.1
+  awesome_bottom_bar: ^1.2.3
 
 dev_dependencies:
   flutter_test:
