--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cloud_firestore: ^4.5.2
   flutter_otp_text_field: ^1.1.1
   awesome_bottom_bar: ^1.2.3
+  lottie: ^2.5.0
+
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
